--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:17.5-alpine
-    container_name: go-banks-postgres
+    container_name: banks-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
